--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -83,6 +83,10 @@
     "# number of subjects used for validation\n",
     "num_validation_subjects = 1\n",
     "\n",
+    "learning_rate = 0.0007\n",
+    "weight_decay = 10e-4\n",
+    "epochs = 3\n",
+    "\n",
     "print(torch.__version__)\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(f\"Using {device}\")"
@@ -176,12 +180,27 @@
     "      test = TensorDataset(featuresTest, targetsTest)\n",
     "      test_loader = DataLoader(test, batch_size=parameters.batch_size, shuffle=False)\n",
     "    \n",
-    "    model = LSTMModel3(input_dim, parameters.hidden_dim, parameters.layer_dim, nclasses, device)\n",
-    "\n",
-    "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate, weight_decay=weight_decay, betas=(beta1, beta2))\n",
-    "    #optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate, weight_decay=weight_decay, momentum=momentum)\n",
+    "    model = CNN(input_dim, parameters.hidden_dim, parameters.layer_dim, parameters.seq_dim)\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
     "    cur_learning_rate = learning_rate\n",
-    "    #scheduler = lrs.ExponentialLR(optimizer, gamma=0.95)\n",
+    "\n",
+    "    # Cross Entropy Loss\n",
+    "    error = nn.CrossEntropyLoss()\n",
+    "\n",
+    "    # Train the model\n",
+    "    for epoch in range(epochs):\n",
+    "      model.train()\n",
+    "      running_loss = 0\n",
+    "      for data, target in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(data)\n",
+    "        loss = error(outputs, target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item()\n",
+    "      print(f\"Epoch: {epoch+1}, Training Loss: {running_loss/len(train_loader)}\")\n",
+    "    print(\"Training finished!\")\n",
+    "\n",
     "\n"
    ]
   },
