--- a/code/cnn.ipynb
+++ b/code/cnn.ipynb
@@ -43,39 +43,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
-    "    def __init__(self, input_dim, seq_dim):\n",
+    "    def __init__(self, input_dim, seq_dim, dropout_rate=0.7):\n",
     "        super(CNN, self).__init__()\n",
     "        \n",
     "        # Define the architecture with layers based on the input arguments\n",
     "        self.conv1 = nn.Conv1d(seq_dim, 64, 5)\n",
     "        self.conv2 = nn.Conv1d(64, 128, 3)\n",
-    "        self.conv3 = nn.Conv1d(128, 256, 3)\n",
-    "        #self.conv4 = nn.Conv1d(256, 512,3)\n",
-    "        self.conv5 = nn.Conv1d(256, 64 ,3)\n",
+    "        self.conv5 = nn.Conv1d(128, 64 , 3)\n",
     "        self.relu = nn.ReLU()\n",
     "        \n",
+    "        self.dropout1 = nn.Dropout(p=dropout_rate)\n",
+    "\n",
     "        # Mise à jour de fc_input_size en fonction des couches de pooling\n",
-    "        self.fc_input_size = 64 * ( input_dim - 5 - 3 - 3 - 3 + 4) \n",
+    "        self.fc_input_size = 64 * ( input_dim - 5 - 3 - 3 + 3) \n",
     "        self.fc = nn.Linear(self.fc_input_size, 2)\n",
     "\n",
     "    def forward(self, x):\n",
     "        # Forward pass\n",
     "        x = self.conv1(x)\n",
     "        x = self.relu(x)\n",
+    "        x = self.dropout1(x)\n",
     "\n",
     "        x = self.conv2(x)\n",
     "        x = self.relu(x)\n",
-    "\n",
-    "        x = self.conv3(x)\n",
-    "        x = self.relu(x)\n",
-    "        \n",
-    "        #x = self.conv4(x)\n",
-    "        #x = self.relu(x)\n",
     "\n",
     "        x = self.conv5(x)\n",
     "        x = self.relu(x)\n",
@@ -563,9 +558,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracies:\n",
+      "[0.5401069518716578, 0.44480519480519476, 0.7142857142857143, 0.47290640394088673, 0.5748792270531401, 0.5803722504230118, 0.5025641025641026, 0.558974358974359, 0.412, 0.5287958115183246, 0.4953703703703704, 0.49760765550239233, 0.6401925391095066, 0.8000000000000002, 0.3354564755838641, 0.4659090909090909]\n",
+      "Mean accuracy: 0.535264134181976\n"
+     ]
+    }
+   ],
    "source": [
     "# Variable we will use throughout the training and testing\n",
     "test_accuracies = []\n",
