Save model rectification

--- a/code/cnn.ipynb
+++ b/code/cnn.ipynb
@@ -43,48 +43,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
-    "    def __init__(self, input_dim, seq_dim, dropout_rate=0.2):\n",
+    "    def __init__(self, input_dim, seq_dim, dropout_rate=0.7):\n",
     "        super(CNN, self).__init__()\n",
     "        \n",
     "        # Define the architecture with layers based on the input arguments\n",
-    "        \"\"\"\n",
-    "        self.conv1 = nn.Conv1d(seq_dim, 128, 4)\n",
-    "        self.conv2 = nn.Conv1d(128, 256, 3)\n",
-    "        self.conv3 = nn.Conv1d(256, 32 , 3)\n",
-    "        self.relu = nn.ReLU()\n",
-    "        \"\"\"\n",
-    "        self.conv1 = nn.Conv1d(seq_dim, 32, 4)\n",
-    "        self.conv2 = nn.Conv1d(32, 64, 3)\n",
+    "        self.conv1 = nn.Conv1d(seq_dim, 16, 6)\n",
+    "        self.conv2 = nn.Conv1d(16, 64, 3)\n",
     "        self.conv3 = nn.Conv1d(64, 32 , 3)\n",
     "        self.relu = nn.ReLU()\n",
     "\n",
     "        \n",
     "        self.dropout1 = nn.Dropout(p=dropout_rate)\n",
     "\n",
-    "        # Mise à jour de fc_input_size en fonction des couches de pooling\n",
-    "        self.fc_input_size = 32 * ( input_dim - 4 - 3 - 3 + 3) \n",
-    "        self.fc = nn.Linear(self.fc_input_size, 2)\n",
+    "        # Fully connected layer\n",
+    "        self.fc_input_size = 32 * ( input_dim - 6 - 3 - 3 + 3) \n",
+    "        self.fc1 = nn.Linear(self.fc_input_size, 128)\n",
+    "        self.fc2 = nn.Linear(128, 64)\n",
+    "        self.fc3 = nn.Linear(64, 2) \n",
     "\n",
     "    def forward(self, x):\n",
     "        # Forward pass\n",
     "        x = self.conv1(x)\n",
     "        x = self.relu(x)\n",
-    "        x = self.dropout1(x)\n",
     "\n",
     "        x = self.conv2(x)\n",
     "        x = self.relu(x)\n",
     "\n",
     "        x = self.conv3(x)\n",
+    "        x = self.dropout1(x)\n",
     "        x = self.relu(x)\n",
-    "        \n",
+    "\n",
     "        x = x.view(x.size(0), -1)\n",
-    "        \n",
-    "        x = self.fc(x)\n",
+    "        x = self.fc1(x)\n",
+    "        x = self.fc2(x)\n",
+    "        x = self.fc3(x)\n",
     "        \n",
     "        return x"
    ]
@@ -98,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +135,7 @@
     "    val_loss_list.append(val_loss.data)\n",
     "    epoch_list.append(epoch)\n",
     "    accuracy_list.append(accuracy)\n",
-    "    #print('Subject: {}/{}  Epoch: {:>3}  Loss: {:.6}/{:.6}  Validation accuracy: {:.2f}'.format(test_subj, xv, epoch, loss, val_loss, accuracy))\n",
+    "    print('Subject: {}/{}  Epoch: {:>3}  Loss: {:.6}/{:.6}  Validation accuracy: {:.2f}'.format(test_subj, xv, epoch, loss, val_loss, accuracy))\n",
     "    return accuracy\n",
     "    \n",
     "def cross_accuracy(model, test_loader, avg_test_acc, test_acc_list, test_accuracies, nclasses, device, error_cpu, input_dim, features_test, targets_test, error, xv, test_subj):\n",
@@ -205,11 +202,6 @@
     "    target_1 = list_targets[0]\n",
     "    target_2 = list_targets[1]\n",
     "\n",
-    "    file_name = f'best_model_checkpoint_{target_1}_{target_2}.pth'\n",
-    "    if os.path.exists(file_name):\n",
-    "        os.remove(file_name)\n",
-    "        print(f'The file {file_name} has been deleted.')\n",
-    "\n",
     "    print(f\"Training model for {target_1} and {target_2}...\")\n",
     "    # Select only the classes we want to predict\n",
     "    train_df, nclasses, targets_numpy = set_targets(train_df, list_targets, list_labels)\n",
@@ -241,6 +233,7 @@
     "        avg_test_acc = 0\n",
     "        test_acc_list = []\n",
     "        best_accuracy = 0\n",
+    "        file_name = f'../model_cnn/best_model_checkpoint_{target_1}_{target_2}_{test_subj}.pth'\n",
     "\n",
     "        # Cross validation\n",
     "        for xv in range(parameters.cross_validation_passes):\n",
@@ -361,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1204,6 +1197,10 @@
     "csvfile = \"../../data/video/All_Subs_Diff_Modules_nofilter_withoutAUc.csv\"\n",
     "train_df = pd.read_csv(csvfile,  delimiter=\",\")  # 101 features (only AU_r)\n",
     "\n",
+    "# Create folder to save models\n",
+    "if not os.path.exists(\"../model_cnn/\"):\n",
+    "    os.makedirs(\"../model_cnn/\")\n",
+    "\n",
     "results_dict = {}\n",
     "\n",
     "# train all models\n",
@@ -1272,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1313,93 +1310,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Early stopping at epoch 4 due to lack of improvement.\n",
-      "Test accuracy for run 0/0: 0.568081991215227\n",
-      "Test accuracy for run 0/1: 0.6998535871156661\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 0/2: 0.6998535871156661\n",
-      "Test accuracy for run 1/0: 0.48579545454545453\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 1/1: 0.48579545454545453\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 1/2: 0.48579545454545453\n",
-      "Early stopping at epoch 4 due to lack of improvement.\n",
-      "Test accuracy for run 2/0: 0.6327608982826949\n",
-      "Test accuracy for run 2/1: 0.5297225891677675\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 2/2: 0.5297225891677675\n",
-      "Test accuracy for run 3/0: 0.6393762183235867\n",
-      "Test accuracy for run 3/1: 0.6198830409356725\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 3/2: 0.6198830409356725\n",
-      "Early stopping at epoch 4 due to lack of improvement.\n",
-      "Test accuracy for run 4/0: 0.746\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 4/1: 0.746\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 4/2: 0.746\n",
-      "Test accuracy for run 5/0: 0.43023255813953487\n",
-      "Test accuracy for run 5/1: 0.32059800664451826\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 5/2: 0.32059800664451826\n",
-      "Test accuracy for run 6/0: 0.6129032258064516\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 6/1: 0.6129032258064516\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 6/2: 0.6129032258064516\n",
-      "Test accuracy for run 7/0: 0.6773675762439807\n",
-      "Test accuracy for run 7/1: 0.6934189406099518\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 7/2: 0.6934189406099518\n",
-      "Early stopping at epoch 4 due to lack of improvement.\n",
-      "Test accuracy for run 8/0: 0.5263157894736842\n",
-      "Early stopping at epoch 4 due to lack of improvement.\n",
-      "Test accuracy for run 8/1: 0.5548245614035088\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 8/2: 0.5548245614035088\n",
-      "Test accuracy for run 9/0: 0.4550063371356147\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 9/1: 0.4550063371356147\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 9/2: 0.4550063371356147\n",
-      "Test accuracy for run 10/0: 0.573051948051948\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 10/1: 0.573051948051948\n",
-      "Test accuracy for run 10/2: 0.5178571428571429\n",
-      "Test accuracy for run 11/0: 0.6345776031434185\n",
-      "Test accuracy for run 11/1: 0.5795677799607073\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 11/2: 0.5795677799607073\n",
-      "Test accuracy for run 12/0: 0.5435684647302904\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 12/1: 0.5435684647302904\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 12/2: 0.5435684647302904\n",
-      "Test accuracy for run 13/0: 0.3859964093357271\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 13/1: 0.3859964093357271\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 13/2: 0.3859964093357271\n",
-      "Test accuracy for run 14/0: 0.39410681399631675\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 14/1: 0.39410681399631675\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 14/2: 0.39410681399631675\n",
-      "Test accuracy for run 15/0: 0.40131578947368424\n",
-      "Early stopping at epoch 3 due to lack of improvement.\n",
-      "Test accuracy for run 15/1: 0.40131578947368424\n",
-      "Early stopping at epoch 4 due to lack of improvement.\n",
-      "Test accuracy for run 15/2: 0.5614035087719298\n",
-      "Test accuracies:\n",
-      "[0.6559297218155197, 0.48579545454545453, 0.5640686922060766, 0.6263807667316438, 0.746, 0.35714285714285715, 0.6129032258064516, 0.6880684858212947, 0.5453216374269007, 0.4550063371356147, 0.5546536796536796, 0.5979043876882777, 0.5435684647302904, 0.3859964093357271, 0.3941068139963167, 0.45467836257309946]\n",
-      "Mean accuracy: 0.5417203310380753\n"
+      "Subject: 0/0  Epoch:   0  Loss: 0.688342/0.666002  Validation accuracy: 0.54\n",
+      "Subject: 0/0  Epoch:   1  Loss: 0.631872/0.58294  Validation accuracy: 0.42\n",
+      "Subject: 0/0  Epoch:   2  Loss: 0.267149/0.317667  Validation accuracy: 0.62\n",
+      "Subject: 0/0  Epoch:   3  Loss: 0.422559/0.446509  Validation accuracy: 0.67\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Nathan\\Documents\\5IF\\PSAT\\Analyse-de-conscience\\code\\cnn.ipynb Cell 15\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/Analyse-de-conscience/code/cnn.ipynb#X20sZmlsZQ%3D%3D?line=98'>99</a>\u001b[0m data, target \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mto(device), target\u001b[39m.\u001b[39mto(device)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/Analyse-de-conscience/code/cnn.ipynb#X20sZmlsZQ%3D%3D?line=99'>100</a>\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/Analyse-de-conscience/code/cnn.ipynb#X20sZmlsZQ%3D%3D?line=100'>101</a>\u001b[0m outputs \u001b[39m=\u001b[39m model(data)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/Analyse-de-conscience/code/cnn.ipynb#X20sZmlsZQ%3D%3D?line=101'>102</a>\u001b[0m loss \u001b[39m=\u001b[39m error(outputs, target)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/Analyse-de-conscience/code/cnn.ipynb#X20sZmlsZQ%3D%3D?line=102'>103</a>\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\torch\\nn\\modules\\module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "\u001b[1;32mc:\\Users\\Nathan\\Documents\\5IF\\PSAT\\Analyse-de-conscience\\code\\cnn.ipynb Cell 15\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/Analyse-de-conscience/code/cnn.ipynb#X20sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrelu(x)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/Analyse-de-conscience/code/cnn.ipynb#X20sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m x \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mview(x\u001b[39m.\u001b[39msize(\u001b[39m0\u001b[39m), \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/Analyse-de-conscience/code/cnn.ipynb#X20sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfc1(x)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/Analyse-de-conscience/code/cnn.ipynb#X20sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc2(x)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Documents/5IF/PSAT/Analyse-de-conscience/code/cnn.ipynb#X20sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc3(x)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\torch\\nn\\modules\\module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\torch\\nn\\modules\\linear.py:114\u001b[0m, in \u001b[0;36mLinear.forward\u001b[1;34m(self, input)\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[1;32m--> 114\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mlinear(\u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -1418,6 +1354,10 @@
     "# Get distinct subjects\n",
     "subj = np.unique(subjects)\n",
     "\n",
+    "if not os.path.exists(\"../model_cnn/\"):\n",
+    "    os.makedirs(\"../model_cnn/\")\n",
+    "\n",
+    "\n",
     "# Loop over all subjects\n",
     "for test_subj in subj:\n",
     "    xv_max_val = 0\n",
@@ -1425,6 +1365,7 @@
     "    val_acc_val_loss_list = []\n",
     "    test_acc_list = []\n",
     "    best_accuracy = 0\n",
+    "    file_name = f'../model_cnn/best_model_checkpoint_{list_targets[0]}_{list_targets[1]}_{test_subj}.pth'\n",
     "\n",
     "    # Cross validation\n",
     "    for xv in range(parameters.cross_validation_passes):\n",
@@ -1511,7 +1452,7 @@
     "            ### Early stopping\n",
     "            if accuracy > best_accuracy:\n",
     "                best_accuracy = accuracy\n",
-    "                torch.save(model.state_dict(), 'model_1_4_bis.pth')\n",
+    "                torch.save(model.state_dict(), file_name)\n",
     "                current_patience = 0  # Reset patience counter\n",
     "            else:\n",
     "                current_patience += 1  # No improvement, increase patience counter\n",
@@ -1522,7 +1463,7 @@
     "                break\n",
     "\n",
     "        # Restore the best model checkpoint\n",
-    "        model.load_state_dict(torch.load('model_1_4_bis.pth'))\n",
+    "        model.load_state_dict(torch.load(file_name))\n",
     "    \n",
     "        # Cross validation accuracy\n",
     "        cross_accuracy(model, test_loader, avg_test_acc, test_acc_list, test_accuracies, nclasses, device, error_cpu, input_dim, features_test, targets_test, error, xv, test_subj)\n",
