Save model rectification

--- a/code/transformer.ipynb
+++ b/code/transformer.ipynb
@@ -245,11 +245,6 @@
     "    target_1 = list_targets[0]\n",
     "    target_2 = list_targets[1]\n",
     "\n",
-    "    file_name = f'tr_best_model_checkpoint_{target_1}_{target_2}.pth'\n",
-    "    if os.path.exists(file_name):\n",
-    "        os.remove(file_name)\n",
-    "        print(f'The file {file_name} has been deleted.')\n",
-    "\n",
     "    print(f\"Training transformer model for {target_1} and {target_2}...\")\n",
     "    # Select only the classes we want to predict\n",
     "    train_df, nclasses, targets_numpy = set_targets(train_df, list_targets, list_labels)\n",
@@ -286,6 +281,8 @@
     "        val_acc_val_loss_list = []\n",
     "        test_acc_list = []\n",
     "        best_accuracy = 0\n",
+    "\n",
+    "        file_name = f'../model_transformer/best_model_checkpoint_{target_1}_{target_2}_{test_subj}.pth'\n",
     "\n",
     "        # Cross validation\n",
     "        for xv in range(parameters.cross_validation_passes):\n",
@@ -484,11 +481,17 @@
     "csvfile = \"../../data/video/All_Subs_Diff_Modules_nofilter_withoutAUc.csv\"\n",
     "train_df = pd.read_csv(csvfile,  delimiter=\",\")  # 101 features (only AU_r)\n",
     "\n",
+    "# Create folder to save models\n",
+    "if not os.path.exists(\"../model_transformer/\"):\n",
+    "    os.makedirs(\"../model_transformer/\")\n",
+    "\n",
+    "\n",
     "results_dict = {}\n",
     "\n",
+    "\n",
     "# train all models\n",
-    "for i in range(4):  # Start the outer loop at 1 and end at 4 \n",
-    "    for j in range(4, 6):  # Start the inner loop at 5 and end at 6\n",
+    "for i in range(6):\n",
+    "    for j in range(i+1, 6):\n",
     "        list_targets = [i, j]\n",
     "        accuracy = train_model(list_labels,list_targets, epochs, learning_rate, weight_decay, device, num_validation_subjects, train_df)\n",
     "        results_dict[tuple(list_targets)] = accuracy\n",
@@ -578,6 +581,10 @@
     "calibrated_test_accuracies = []\n",
     "all_outputs = np.empty((0, nclasses), dtype='float')\n",
     "\n",
+    "# Create folder to save models\n",
+    "if not os.path.exists(\"../model_transformer/\"):\n",
+    "    os.makedirs(\"../model_transformer/\")\n",
+    "\n",
     "# Validation accuracy\n",
     "loss_list = []\n",
     "val_loss_list = []\n",
@@ -594,6 +601,7 @@
     "    val_acc_val_loss_list = []\n",
     "    test_acc_list = []\n",
     "    best_accuracy = 0\n",
+    "    file_name = f'../model_cnn/best_model_checkpoint_{list_targets[0]}_{list_targets[1]}_{test_subj}.pth'\n",
     "\n",
     "    # Cross validation\n",
     "    for xv in range(parameters.cross_validation_passes):\n",
@@ -680,7 +688,7 @@
     "            ### Early stopping\n",
     "            if accuracy > best_accuracy:\n",
     "                best_accuracy = accuracy\n",
-    "                torch.save(model.state_dict(), 'tr_best_model_checkpoint.pth')\n",
+    "                torch.save(model.state_dict(), file_name)\n",
     "                current_patience = 0  # Reset patience counter\n",
     "            else:\n",
     "                current_patience += 1  # No improvement, increase patience counter\n",
@@ -691,7 +699,7 @@
     "                break\n",
     "\n",
     "        # Restore the best model checkpoint\n",
-    "        model.load_state_dict(torch.load('tr_best_model_checkpoint.pth'))\n",
+    "        model.load_state_dict(torch.load(file_name))\n",
     "    \n",
     "        # Cross validation accuracy\n",
     "        cross_accuracy(model, test_loader, avg_test_acc, test_acc_list, test_accuracies, nclasses, device, error_cpu, input_dim, features_test, targets_test, error, xv, test_subj)\n",
@@ -838,7 +846,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
